# text-analy-tool

./: CMakeLists.txt  app.py  main.py  text_processor.cpp
